Add manually retained note trash
